fixed sideways movement bug and changed scrollbars

--- a/highlighting/styles/verbatim-dark-syntax.css
+++ b/highlighting/styles/verbatim-dark-syntax.css
@@ -5,23 +5,7 @@ Inspired By Atom One Dark
 
 */
 
-:root {
-    --mono-1: #abb2bf;
-    --mono-2: #818896;
-    --mono-3: #5c6370;
-    --hue-1: #5fa6af;
-    --hue-2: #7eb5e2;
-    --hue-3: #a97cb7;
-    --hue-4: #95b57f;
-    --hue-5: #dc6068;
-    --hue-5-2: #ab4940;
-    --hue-6: #d39051;
-    --hue-6-2: #cfbd78;
-}
-
-body {
-    background-color: var(--base);
-}
+@import url(/styles/themes/verbatim-dark.css);
 
 .hljs {
     color: var(--mono-1);
