--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,3 +1,5 @@
+@import url(themes/verbatim-dark.css);
+
 body {
     margin: 0;
 }
@@ -6,7 +8,7 @@ body {
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 0.4fr 1fr;
+    grid-template-columns: 0.3fr 1fr;
     grid-template-rows: 0.1fr 1fr 0.03fr;
     gap: 0px 0px;
     grid-auto-flow: row;
@@ -14,21 +16,45 @@ body {
         "header header"
         "actions content"
         "lowerbar lowerbar";
-    background-color: var(--base);
-}
-  
-.content { 
-    grid-area: content;
-    position: relative;
+    background-color: var(--base-1);
 }
   
 .actions { grid-area: actions; }
   
 .header { grid-area: header; }
   
-.lowerbar { grid-area: lowerbar; }
+.lowerbar { 
+    grid-area: lowerbar; 
+    background-color: var(--hue-6);
+}
 
+/* Code Input */
+/* Requires !important */
 code-input {
+    grid-area: content;
     margin: 0!important;
     --padding: 10px!important;
+    height: 100%!important;
+}
+
+.editing {
+    caret-color: var(--mono-1);
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #00000000; 
+}
+::-webkit-scrollbar-thumb {
+    background: var(--base-3); 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--base-4); 
+}
+::-webkit-scrollbar-corner {
+    background: #00000000;
 }
